// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaViewMultiImage should render 2 images correctly 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "height": 220,
      "marginHorizontal": 12,
      "marginTop": 12,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "marginRight": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com0"
    >
      <View
        style={
          {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <Image
          blurred={false}
          contentFit="cover"
          locked={false}
          onError={[Function]}
          onLoadEnd={[Function]}
          onProgress={[Function]}
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "X-XSRF-TOKEN": "",
                "no-cache": "1",
              },
              "uri": "http://fake.com0",
            }
          }
          style={
            {
              "borderRadius": 3,
              "elevation": 2,
              "flex": 1,
              "height": "100%",
              "shadowColor": "rgba(0, 0, 0, 0.4)",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 0,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "marginLeft": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com1"
    >
      <View
        style={
          {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <Image
          blurred={false}
          contentFit="cover"
          locked={false}
          onError={[Function]}
          onLoadEnd={[Function]}
          onProgress={[Function]}
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "X-XSRF-TOKEN": "",
                "no-cache": "1",
              },
              "uri": "http://fake.com1",
            }
          }
          style={
            {
              "borderRadius": 3,
              "elevation": 2,
              "flex": 1,
              "height": "100%",
              "shadowColor": "rgba(0, 0, 0, 0.4)",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 0,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`MediaViewMultiImage should render 3 images correctly 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "height": 220,
      "marginHorizontal": 12,
      "marginTop": 12,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "marginRight": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com0"
    >
      <View
        style={
          {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <Image
          blurred={false}
          contentFit="cover"
          locked={false}
          onError={[Function]}
          onLoadEnd={[Function]}
          onProgress={[Function]}
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "X-XSRF-TOKEN": "",
                "no-cache": "1",
              },
              "uri": "http://fake.com0",
            }
          }
          style={
            {
              "borderRadius": 3,
              "elevation": 2,
              "flex": 1,
              "height": "100%",
              "shadowColor": "rgba(0, 0, 0, 0.4)",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 0,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "marginLeft": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com1"
    >
      <View
        style={
          {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <Image
          blurred={false}
          contentFit="cover"
          locked={false}
          onError={[Function]}
          onLoadEnd={[Function]}
          onProgress={[Function]}
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "X-XSRF-TOKEN": "",
                "no-cache": "1",
              },
              "uri": "http://fake.com1",
            }
          }
          style={
            {
              "borderRadius": 3,
              "elevation": 2,
              "flex": 1,
              "height": "100%",
              "shadowColor": "rgba(0, 0, 0, 0.4)",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 8,
        }
      }
    />
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com2"
    >
      <View
        style={
          {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <Image
          blurred={false}
          contentFit="cover"
          locked={false}
          onError={[Function]}
          onLoadEnd={[Function]}
          onProgress={[Function]}
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "X-XSRF-TOKEN": "",
                "no-cache": "1",
              },
              "uri": "http://fake.com2",
            }
          }
          style={
            {
              "borderRadius": 3,
              "elevation": 2,
              "flex": 1,
              "height": "100%",
              "shadowColor": "rgba(0, 0, 0, 0.4)",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 0,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`MediaViewMultiImage should render 4 images correctly 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "height": 220,
      "marginHorizontal": 12,
      "marginTop": 12,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "marginRight": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com0"
    >
      <View
        style={
          {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <Image
          blurred={false}
          contentFit="cover"
          locked={false}
          onError={[Function]}
          onLoadEnd={[Function]}
          onProgress={[Function]}
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "X-XSRF-TOKEN": "",
                "no-cache": "1",
              },
              "uri": "http://fake.com0",
            }
          }
          style={
            {
              "borderRadius": 3,
              "elevation": 2,
              "flex": 1,
              "height": "100%",
              "shadowColor": "rgba(0, 0, 0, 0.4)",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 8,
        }
      }
    />
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com2"
    >
      <View
        style={
          {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <Image
          blurred={false}
          contentFit="cover"
          locked={false}
          onError={[Function]}
          onLoadEnd={[Function]}
          onProgress={[Function]}
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "X-XSRF-TOKEN": "",
                "no-cache": "1",
              },
              "uri": "http://fake.com2",
            }
          }
          style={
            {
              "borderRadius": 3,
              "elevation": 2,
              "flex": 1,
              "height": "100%",
              "shadowColor": "rgba(0, 0, 0, 0.4)",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 0,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "marginLeft": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com1"
    >
      <View
        style={
          {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <Image
          blurred={false}
          contentFit="cover"
          locked={false}
          onError={[Function]}
          onLoadEnd={[Function]}
          onProgress={[Function]}
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "X-XSRF-TOKEN": "",
                "no-cache": "1",
              },
              "uri": "http://fake.com1",
            }
          }
          style={
            {
              "borderRadius": 3,
              "elevation": 2,
              "flex": 1,
              "height": "100%",
              "shadowColor": "rgba(0, 0, 0, 0.4)",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 8,
        }
      }
    />
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com3"
    >
      <View
        style={
          {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <Image
          blurred={false}
          contentFit="cover"
          locked={false}
          onError={[Function]}
          onLoadEnd={[Function]}
          onProgress={[Function]}
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "X-XSRF-TOKEN": "",
                "no-cache": "1",
              },
              "uri": "http://fake.com3",
            }
          }
          style={
            {
              "borderRadius": 3,
              "elevation": 2,
              "flex": 1,
              "height": "100%",
              "shadowColor": "rgba(0, 0, 0, 0.4)",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 0,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
